Fixes jumbotron on iphone
Also separates the strawberry from the field so it wraps (but we all know they go together..) and makes on iphone 4/6/X the serchbox exactly the size it needs to be (5 px less...common...)

--- a/css/custom.css
+++ b/css/custom.css
@@ -184,12 +184,16 @@ pre code {
     }
 
     #views-exposed-form-solr-search-content-page-1:focus-within fieldset.form-type-search-api-autocomplete input {
-        width: 180px !important;
+        width: 175px !important;
         flex: 1;
         transition: none !important;
     }
     #views-exposed-form-solr-search-content-page-1 fieldset.form-type-search-api-autocomplete input {
         transition: none !important;
+    }
+    .jumbotron {
+        margin-left:0!important;
+        margin-right:0!important;
     }
 
 }
